iteration 6 is no showing info, dont know why. Gonna do css now

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div>
   <img src="/images/beer.png" />
-    <a href="#">Check the Beers!</a>
-    <a href="#">Check a Random Beer!</a>
+    <a href="/beers">Check the Beers!</a>
+    <a href="/random-beers">Check a Random Beer!</a>
 </div>
