--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,15 +1,21 @@
 <html>
   <head>
-    <!--<link rel="stylesheet" href="/public/stylesheets/styles.css">-->
+    <link rel="stylesheet" href="./stylesheets/styles.css">
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/beers">Beers</a>
-      <a href="/random-beers">Random-Beers</a>
-    </nav>
+    <div class="main-nav">
+      <nav class="nav">
+        <a class="nav-style" href="/">Home</a>
+        <a class="nav-style" href="/beers">Beers</a>
+        <a class="nav-style" href="/random-beers">Random-Beers</a>
+      </nav>
+    </div>
 
     {{{ body }}}
+
+    <footer>
+        <span>Developed in IronHack ;)</span>
+    </footer>
 
   </body>
 </html>
