--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
-<div>
+<div class="index">
   <img src="/images/beer.png" />
-    <a href="/beers">Check the Beers!</a>
-    <a href="/random-beers">Check a Random Beer!</a>
+  <dic class="btn-flex-style">
+    <a class="btn" href="/beers">Check the Beers!</a>
+    <a class="btn" href="/random-beers">Check a Random Beer!</a>
+  </dic>
 </div>
